# marker-based-deformation-measurement

./: .gitattributes  .gitignore  CITATION.cff  COMMERCIAL_LICENSE.md  DATA_NOTICE.md  LICENSE  NOTICE.md  README.md  pyproject.toml  repository_manifest.csv  requirements.txt
configs/: bone2_example_config.yaml
deformation_protocol/: __init__.py  alignment.py  cli.py  io.py  marker_detection.py  marker_engine.py  marker_overview.py  plotting.py  statistics.py
docs/: Deformation_measurement_protocol.md  alignment_procedure.md  marker_detection_and_refinement.md
example_data/Bone_2/bending_in_sagittal_plane/marker_pairs/fracture_zone_3_to_5/: params.yaml
example_data/Bone_2/bending_in_sagittal_plane/marker_pairs/whole_bone_2_to_6/: params.yaml
example_data/Bone_2/compression/marker_pairs/fracture_zone_6_to_1/: params.yaml
example_data/Bone_2/compression/marker_pairs/whole_bone_4_to_7/: params.yaml
outputs/aligned_images/bending_in_sagittal_plane/: alignment_manifest.csv
outputs/aligned_images/bending_in_sagittal_plane/roi_selection_output/: fit_results.csv  selection_config.yaml
outputs/deformation_statistics/: deformation_mean_ci.csv
outputs/deformation_tables/bending_in_sagittal_plane/fracture_zone_3_to_5/: distances.csv
outputs/deformation_tables/bending_in_sagittal_plane/whole_bone_2_to_6/: distances.csv
outputs/deformation_tables/compression/fracture_zone_6_to_1/: distances.csv
outputs/deformation_tables/compression/whole_bone_4_to_7/: distances.csv  warnings.csv
